<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/bigo_best" />
            <TextView
                android:layout_column="2"
                android:text="@string/bigo_average" />
            <TextView
                android:layout_column="3"
                android:text="@string/bigo_worst" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:id="@+id/bigo_best"/>
            <TextView
                android:layout_column="2"
                android:id="@+id/bigo_average"/>
            <TextView
                android:layout_column="3"
                android:id="@+id/bigo_worst"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/bigo_memory" />
            <TextView
                android:layout_column="2"
                android:text="@string/bigo_stable" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:id="@+id/bigo_memory"/>
            <TextView
                android:layout_column="2"
                android:id="@+id/bigo_stable"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sorting_info"/>

</LinearLayout>