<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <gene.com.bigo.sort.view.Graph
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/prev_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_step"/>

        <Button
            android:id="@+id/play_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_steps"/>

        <Button
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_step"/>

    </LinearLayout>


</LinearLayout>